I did a round of findbus. I also changed the generator to create a single unique method object for each method/declaring class combo, which reduces the size of the overall Introspector_Impl.
git-svn-id: http://gwittir.googlecode.com/svn/trunk@29 d620f1b1-8330-0410-a80d-d7860aac830e